--- a/home.html
+++ b/home.html
@@ -413,7 +413,7 @@ html {
     <tr></tr>
   </tr><tr>
     <td align="center"><font size="3" color="white" ><p><br>Color Guessing Game<br>            
-      Thanks to information from w3schools<br><img src="git.png" height="20px" width="20px">  Github: https://github.com/61070140/Project-Multi1</p><br><br></font></td></tr>
+      Thanks to information from w3schools<br><a href=https://github.com/61070140/Project-Multi1 target=”_blank”><img src="git.png" height="20px" width="20px"></a>  Github: https://github.com/61070140/Project-Multi1</p><br><br></font></td></tr>
   </tbody><tr></tr>
     <tr></tr>
     <tr></tr>
