--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <html>
   <head>
-    <iframe src="sound1.mp3" style="display: none;" loop="True"></iframe>
+    <link rel="icon" 
+      type="image/ico" 
+      href="icon.ico">
+      <iframe src="sound1.mp3" style="display: none;" loop="True"></iframe>
     <title>RGB Guessing Game
     </title>
+    
     <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link type="text/javascript" href="cal.js">
